--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   http: ^1.3.0
   logger: ^2.5.0
   email_validator: ^3.0.0
-  shared_preferences: ^2.5.3
+  shared_preferences: any
   image_picker: ^1.1.2
 
 
