--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_svg: ^2.0.17
-  pin_code_fields: ^8.0.1
-  http: ^1.3.0
-  logger: ^2.5.0
-  email_validator: ^3.0.0
-  shared_preferences: any
-  image_picker: ^1.1.2
+  get: ^4.7.2
 
 
 
